Off canvas menu: Fix a styling bug that hid links on small screens

--- a/src/components/OffCanvasMenu/styles.scss
+++ b/src/components/OffCanvasMenu/styles.scss
@@ -8,7 +8,7 @@
 }
 
 .et--off-canvas-menu__nav {
-  padding: 1rem 3rem 1rem 0.5rem;
+  padding: 1rem 3rem 1rem 1.5rem;
 
   @media (min-width: breakpoint('md')) {
     padding: 1.5rem 5rem 1.5rem 1.5rem;
@@ -23,10 +23,6 @@
   font-family: $font-family-sans-serif;
   font-weight: bold;
   text-decoration: none;
-
-  @media (max-width: breakpoint('lg')) {
-    display: none;
-  }
 
   &:hover,
   &:focus,
